[package]
name = "dharitri-wasm-module-dns"
version = "0.0.40"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri Network <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Dharitri-org/dx-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly smart contract module that allows a contract to register its own name"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[features]
wasm-output-mode = ["dharitri-wasm-node"]

[dependencies.dharitri-wasm]
version = "0.0.40"
path = "../../../dharitri-wasm"

[dependencies.dharitri-wasm-derive]
version = "0.0.40"
path = "../../../dharitri-wasm-derive"

[dependencies.dharitri-wasm-node]
version = "0.0.40"
path = "../../../dharitri-wasm-node"
optional = true

[dev-dependencies.dharitri-wasm-debug]
version = "0.0.40"
path = "../../../dharitri-wasm-debug"
